--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
   <title>tukule.food</title>
 </head>
 <body>
-  <!-- <script>
+  <!-- <script async>
     (g=>{var h,a,k,p="The Google Maps JavaScript API",c="google",l="importLibrary",q="__ib__",m=document,b=window;b=b[c]||(b[c]={});var d=b.maps||(b.maps={}),r=new Set,e=new URLSearchParams,u=()=>h||(h=new Promise(async(f,n)=>{await (a=m.createElement("script"));e.set("libraries",[...r]+"");for(k in g)e.set(k.replace(/[A-Z]/g,t=>"_"+t[0].toLowerCase()),g[k]);e.set("callback",c+".maps."+q);a.src=`https://maps.${c}apis.com/maps/api/js?`+e;d[q]=f;a.onerror=()=>h=n(Error(p+" could not load."));a.nonce=m.querySelector("script[nonce]")?.nonce||"";m.head.append(a)}));d[l]?console.warn(p+" only loads once. Ignoring:",g):d[l]=(f,...n)=>r.add(f)&&u().then(()=>d[l](f,...n))})({
       key: "AIzaSyCwFvET7jbg6iesvbMJLyAjsYIgS3FZ72o",
       v: "weekly",
@@ -30,9 +30,8 @@
       // Add other bootstrap parameters as needed, using camel case.
     });
   </script> -->
-   <!-- <script async
-   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCwFvET7jbg6iesvbMJLyAjsYIgS3FZ72o&loading=async&callback=initMap">
- </script> -->
+  <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCwFvET7jbg6iesvbMJLyAjsYIgS3FZ72o&libraries=places&loading=async"></script>
+
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <app-root>
   <div class="fade show" style="text-align: center; padding-top: calc(100vh / 2); height: 100vh">
